
[package]
name = "ttd-updates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mailgun-rs = "0.1.3"
ureq = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.85"
dotenv = "0.15.0"